monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0144/A0144b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0144;

grammar A0144b {

  Foo = "alsofoo";

}
